first main push, bg image for people, names

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
         <link rel="stylesheet" href="css/style.css">
         <title>Zoom</title>
     </head>
-    <body>
-        <header>
+    <body class="black">
+        <header class="black">
             <div class="hLinks">
-                <a href="#">
+                <a href="#" class="hLinks grey">
                     <span class="hLinks"> <i class="fa-solid fa-table-cells"></i> Speaker View </span>
                 </a>
-                <a href="#">
+                <a href="#" class="hLinks grey">
                     <span class="hLinks"><i class="fa-solid fa-maximize"></i></span>
                 </a>
             </div>
@@ -26,9 +26,16 @@
 
         <!-- main start -->
 
-        <main class="container">
+        <main class="container black">
+
+            <!-- people list -->
+
             <div class="people">
-                <div class="person"></div>
+                <div class="person">
+                    <div class="pCommands grey">
+                        <span class="names"> Pinco Pallo </span>
+                    </div>
+                </div>
                 <div class="person"></div>
                 <div class="person"></div>
                 <div class="person"></div>
@@ -68,7 +75,7 @@
 
         <!-- footer start -->
 
-        <footer>
+        <footer class="darkgrey">
 
         </footer>
     </body>
