card push, initial footer push

--- a/index.html
+++ b/index.html
@@ -33,50 +33,193 @@
             <div class="people">
                 <div class="person">
                     <div class="pCommands grey">
-                        <span class="names"> Pinco Pallo </span>
+                        <span class="names"> <a class="fa-solid fa-microphone-slash"></a> Pinco Pallo </span>
                     </div>
                 </div>
-                <div class="person"></div>
-                <div class="person"></div>
-                <div class="person"></div>
-                <div class="person"></div>
-                <div class="person"></div>
-                <div class="person"></div>
-                <div class="person"></div>
-                <div class="person"></div>
-                <div class="person"></div>
-                <div class="person"></div>
-                <div class="person"></div>
-                <div class="person"></div>
-                <div class="person"></div>
-                <div class="person"></div>
-                <div class="person"></div>
-                <div class="person"></div>
-                <div class="person"></div>
-                <div class="person"></div>
-                <div class="person"></div>
-                <div class="person"></div>
-                <div class="person"></div>
-                <div class="person"></div>
-                <div class="person"></div>
-                <div class="person"></div>
-                <div class="person"></div>
-                <div class="person"></div>
-                <div class="person"></div>
-                <div class="person"></div>
-                <div class="person"></div>
-                <div class="person"></div>
-                <div class="person"></div>
-                <div class="person"></div>
-                <div class="person"></div>
-                <div class="person"></div>
+                <div class="person">
+                    <div class="pCommands grey">
+                        <span class="names"> <a class="fa-solid fa-microphone-slash"></a> Pinco Pallo </span>
+                    </div>
+                </div>
+                <div class="person">
+                    <div class="pCommands grey">
+                        <span class="names"> <a class="fa-solid fa-microphone-slash"></a> Pinco Pallo </span>
+                    </div>
+                </div>
+                <div class="person">
+                    <div class="pCommands grey">
+                        <span class="names"> <a class="fa-solid fa-microphone-slash"></a> Pinco Pallo </span>
+                    </div>
+                </div>
+                <div class="person">
+                    <div class="pCommands grey">
+                        <span class="names"> <a class="fa-solid fa-microphone-slash"></a> Pinco Pallo </span>
+                    </div>
+                </div>
+                <div class="person">
+                    <div class="pCommands grey">
+                        <span class="names"> <a class="fa-solid fa-microphone-slash"></a> Pinco Pallo </span>
+                    </div>
+                </div>
+                <div class="person">
+                    <div class="pCommands grey">
+                        <span class="names"> <a class="fa-solid fa-microphone-slash"></a> Pinco Pallo </span>
+                    </div>
+                </div>
+                <div class="person">
+                    <div class="pCommands grey">
+                        <span class="names"> <a class="fa-solid fa-microphone-slash"></a> Pinco Pallo </span>
+                    </div>
+                </div>
+                <div class="person">
+                    <div class="pCommands grey">
+                        <span class="names"> <a class="fa-solid fa-microphone-slash"></a> Pinco Pallo </span>
+                    </div>
+                </div>
+                <div class="person">
+                    <div class="pCommands grey">
+                        <span class="names"> <a class="fa-solid fa-microphone-slash"></a> Pinco Pallo </span>
+                    </div>
+                </div>
+                <div class="person">
+                    <div class="pCommands grey">
+                        <span class="names"> <a class="fa-solid fa-microphone-slash"></a> Pinco Pallo </span>
+                    </div>
+                </div>
+                <div class="person">
+                    <div class="pCommands grey">
+                        <span class="names"> <a class="fa-solid fa-microphone-slash"></a> Pinco Pallo </span>
+                    </div>
+                </div>
+                <div class="person">
+                    <div class="pCommands grey">
+                        <span class="names"> <a class="fa-solid fa-microphone-slash"></a> Pinco Pallo </span>
+                    </div>
+                </div>
+                <div class="person">
+                    <div class="pCommands grey">
+                        <span class="names"> <a class="fa-solid fa-microphone-slash"></a> Pinco Pallo </span>
+                    </div>
+                </div>
+                <div class="person">
+                    <div class="pCommands grey">
+                        <span class="names"> <a class="fa-solid fa-microphone-slash"></a> Pinco Pallo </span>
+                    </div>
+                </div>
+                <div class="person">
+                    <div class="pCommands grey">
+                        <span class="names"> <a class="fa-solid fa-microphone-slash"></a> Pinco Pallo </span>
+                    </div>
+                </div>
+                <div class="person">
+                    <div class="pCommands grey">
+                        <span class="names"> <a class="fa-solid fa-microphone-slash"></a> Pinco Pallo </span>
+                    </div>
+                </div>
+                <div class="person">
+                    <div class="pCommands grey">
+                        <span class="names"> <a class="fa-solid fa-microphone-slash"></a> Pinco Pallo </span>
+                    </div>
+                </div>
+                <div class="person">
+                    <div class="pCommands grey">
+                        <span class="names"> <a class="fa-solid fa-microphone-slash"></a> Pinco Pallo </span>
+                    </div>
+                </div>
+                <div class="person">
+                    <div class="pCommands grey">
+                        <span class="names"> <a class="fa-solid fa-microphone-slash"></a> Pinco Pallo </span>
+                    </div>
+                </div>
+                <div class="person">
+                    <div class="pCommands grey">
+                        <span class="names"> <a class="fa-solid fa-microphone-slash"></a> Pinco Pallo </span>
+                    </div>
+                </div>
+                <div class="person">
+                    <div class="pCommands grey">
+                        <span class="names"> <a class="fa-solid fa-microphone-slash"></a> Pinco Pallo </span>
+                    </div>
+                </div>
+                <div class="person">
+                    <div class="pCommands grey">
+                        <span class="names"> <a class="fa-solid fa-microphone-slash"></a> Pinco Pallo </span>
+                    </div>
+                </div>
+                <div class="person">
+                    <div class="pCommands grey">
+                        <span class="names"> <a class="fa-solid fa-microphone-slash"></a> Pinco Pallo </span>
+                    </div>
+                </div>
+                <div class="person">
+                    <div class="pCommands grey">
+                        <span class="names"> <a class="fa-solid fa-microphone-slash"></a> Pinco Pallo </span>
+                    </div>
+                </div>
+                <div class="person">
+                    <div class="pCommands grey">
+                        <span class="names"> <a class="fa-solid fa-microphone-slash"></a> Pinco Pallo </span>
+                    </div>
+                </div>
+                <div class="person">
+                    <div class="pCommands grey">
+                        <span class="names"> <a class="fa-solid fa-microphone-slash"></a> Pinco Pallo </span>
+                    </div>
+                </div>
+                <div class="person">
+                    <div class="pCommands grey">
+                        <span class="names"> <a class="fa-solid fa-microphone-slash"></a> Pinco Pallo </span>
+                    </div>
+                </div>
+                <div class="person">
+                    <div class="pCommands grey">
+                        <span class="names"> <a class="fa-solid fa-microphone-slash"></a> Pinco Pallo </span>
+                    </div>
+                </div>
+                <div class="person">
+                    <div class="pCommands grey">
+                        <span class="names"> <a class="fa-solid fa-microphone-slash"></a> Pinco Pallo </span>
+                    </div>
+                </div>
+                <div class="person">
+                    <div class="pCommands grey">
+                        <span class="names"> <a class="fa-solid fa-microphone-slash"></a> Pinco Pallo </span>
+                    </div>
+                </div>
+                <div class="person">
+                    <div class="pCommands grey">
+                        <span class="names"> <a class="fa-solid fa-microphone-slash"></a> Pinco Pallo </span>
+                    </div>
+                </div>
+                <div class="person">
+                    <div class="pCommands grey">
+                        <span class="names"> <a class="fa-solid fa-microphone-slash"></a> Pinco Pallo </span>
+                    </div>
+                </div>
+                <div class="person">
+                    <div class="pCommands grey">
+                        <span class="names"> <a class="fa-solid fa-microphone-slash"></a> Pinco Pallo </span>
+                    </div>
+                </div>
+                <div class="person">
+                    <div class="pCommands grey">
+                        <span class="names"> <a class="fa-solid fa-microphone-slash"></a> Pinco Pallo </span>
+                    </div>
+                </div>
             </div>
         </main>
 
         <!-- footer start -->
 
         <footer class="darkgrey">
-
+            <div><a class="fa-solid fa-user-plus"></a></div>
+            <div><a class="fa-solid fa-user-group"></a></div>
+            <div><a class="fa-solid fa-chart-column"></a></div>
+            <div><a class="fa-solid fa-share-from-square"></a></div>
+            <div><a class="fa-solid fa-comment"></a></div>
+            <div><a class="fa-solid fa-record-vinyl"></a></div>
+            <div><a class="fa-brands fa-microsoft"></a></div>
+            <div><a class="fa-solid fa-ellipsis"></a></div>
         </footer>
     </body>
 </html>
