final push, footer buttons, end meeting and card fix, ex complete

--- a/index.html
+++ b/index.html
@@ -212,14 +212,104 @@
         <!-- footer start -->
 
         <footer class="darkgrey">
-            <div><a class="fa-solid fa-user-plus"></a></div>
-            <div><a class="fa-solid fa-user-group"></a></div>
-            <div><a class="fa-solid fa-chart-column"></a></div>
-            <div><a class="fa-solid fa-share-from-square"></a></div>
-            <div><a class="fa-solid fa-comment"></a></div>
-            <div><a class="fa-solid fa-record-vinyl"></a></div>
-            <div><a class="fa-brands fa-microsoft"></a></div>
-            <div><a class="fa-solid fa-ellipsis"></a></div>
+            <div class="commandContainer">
+                <div class="cornerContainer left">
+                    <!-- mute / unmute -->
+
+                    <div class="icon-text-container">
+                        <a href="#" class="command fa-solid fa-microphone"></a> 
+                        <span class="white"> Mute </span>
+                    </div>
+
+                    <!-- popup menu arrow -->
+
+                    <div class="icon-text-container">
+                        <a href="#" class="arrow fa-solid fa-angle-up"></a>  
+                    </div>
+
+                    <!-- stop video -->
+
+                    <div class="icon-text-container">
+                        <a href="#" class="command fa-solid fa-video"></a>
+                        <span class="white"> Stop Video </span>
+                    </div>
+
+                    <!-- popup menu arrow -->
+
+                    <div class="icon-text-container">
+                        <a href="#" class="arrow fa-solid fa-angle-up"></a>
+                    </div>
+                </div>
+                <div class="buttonContainer">
+
+                    <!-- invite button -->
+
+                    <div class="icon-text-container">
+                        <a href="#" class="command fa-solid fa-user-plus"></a> 
+                        <span class="white">Invite</span>
+                    </div>
+
+                    <!-- Participants button -->
+                    <div class="icon-text-container">
+                        <a href="#" class="command fa-solid fa-user-group"></a> 
+                        <span class="white"> Manage Participants </span> 
+                    </div> 
+
+                    <!-- Polls -->
+
+                    <div class="icon-text-container">
+                        <a href="#" class="command fa-solid fa-chart-column"></a> 
+                        <span class="white"> Polling </span>
+                    </div>
+
+                    <!-- screen share -->
+
+                    <div class="icon-text-container">
+                        <a href="#" class="command fa-solid fa-share-from-square" style="color:green;"></a> 
+                        <span class="white"> Share Screen </span>
+                    </div>
+
+                    <!-- popup menu arrow -->
+
+                    <div class="icon-text-container">
+                        <a href="#" class="arrow fa-solid fa-angle-up"></a>  
+                    </div>
+
+                    <!-- Chat -->
+
+                    <div class="icon-text-container">
+                        <a href="#" class="command fa-solid fa-comment"></a> 
+                        <span class="white"> Chat </span> 
+                    </div>
+
+                    <!-- Record -->
+
+
+                    <div class="icon-text-container">
+                        <a href="#" class="command fa-solid fa-record-vinyl"></a>
+                        <span class="white"> Record </span>
+                    </div>
+
+                    <!-- Rooms -->
+
+                    <div class="icon-text-container">
+                        <a href="#" class="command fa-brands fa-microsoft"></a>
+                        <span class="white"> Breakout Rooms </span>
+                    </div>
+
+                    <!-- More info -->
+
+                    <div class="icon-text-container">
+                        <a href="#" class="command fa-solid fa-ellipsis"></a>
+                        <span class="white"> More </span>
+                    </div>
+                </div>
+                <div class="cornerContainer right">
+                    <a href="#" class="endMeeting grey">
+                        End Meeting
+                    </a>
+                </div>
+            </div>
         </footer>
     </body>
 </html>
